# pteero-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  egg-pteero-bot.json  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
.zed/: settings.json
src/pteero/: bot.py  main.py
src/pteero/bot/: bot.py  utils.py
src/pteero/bot/cogs/: dashboard.py  permissions.py
src/pteero/bot/views/dashboard/: __init__.py  formatters.py  view.py
src/pteero/bot/views/permissions/: formatters.py  view.py
src/pteero/core/: cache.py  config.py  database.py  http.py  i18n.py  logger.py  utils.py
src/pteero/core/repositories/: __init__.py  dashboard.py  permissions.py
src/pteero/features/: __init__.py  utils.py
src/pteero/features/cogs/: dashboard.py  permissions.py
src/pteero/features/dashboards/: cog.py  repository.py
src/pteero/features/dashboards/views/: view.py
src/pteero/features/permissions/: cog.py  repository.py
src/pteero/features/permissions/views/: formatters.py  view.py
src/pteero/features/views/dashboard/: __init__.py  view.py
src/pteero/features/views/permissions/: view.py
src/pteero/integrations/pterodactyl/: client.py
src/pteero/locales/: en.json  uk.json
src/pteero/services/: base.py  pterodactyl.py
src/pteero/services/pterodactyl/: client.py  schemas.py
src/pteero/services/schemas/: pterodactyl.py
