[project]
name = "pteero"
version = "0.2.2"
description = "A Discord bot for managing self-hosted game servers."
readme = "README.md"
requires-python = ">=3.14"
license = "GPL-3.0-only"
authors = [{ name = "Skrriply" }]
dependencies = [
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "disnake>=2.12.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[project.urls]
Homepage = "https://github.com/Skrriply/pteero-bot"
Issues = "https://github.com/Skrriply/pteero-bot/issues"
Repository = "https://github.com/Skrriply/pteero-bot.git"

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "prek>=0.4.5",
    "ruff>=0.15.17",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "standard"
